--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,4 +65,7 @@ jobs:
           python-version: "3.10"
 
       - name: Run Installer Script 📥
-        run: sudo python3 viridian/algae/setup/main.py -g -a no -v DEBUG ${{ matrix.caerulean }} -r ${{ matrix.dist }}
+        env:
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
+          IMAGE_VERSIM: ${{ (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')) && github.ref_name || 'latest' }}
+        run: sudo python3 viridian/algae/setup/main.py -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }} -d ${{ env.IMAGE_VERSIM }}
