iptables flushing added in case no rules were saved

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,5 +67,4 @@ jobs:
       - name: Run Installer Script 📥
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-          IMAGE_VERSIM: ${{ (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags')) && github.ref_name || 'latest' }}
-        run: sudo python3 viridian/algae/setup/main.py -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }} -d ${{ env.IMAGE_VERSIM }}
+        run: sudo python3 viridian/algae/setup/main.py -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }}
