lint and docs added

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,4 +67,5 @@ jobs:
       - name: Run Installer Script 📥
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        run: sudo python3 viridian/algae/setup/main.py -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }}
+          PYTHONPATH: viridian/algae
+        run: sudo python3 setup -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }}
