paths and module updated

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,4 +68,4 @@ jobs:
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
           PYTHONPATH: viridian/algae
-        run: sudo python3 setup -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }}
+        run: sudo python3 -m setup -g -a no ${{ matrix.caerulean }} -r ${{ matrix.dist }} -s ${{ env.BRANCH_NAME }}
