poethepoet generation step added

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,11 +31,8 @@ jobs:
 
       - name: Install Dependencies 🔮
         run: |
-          pip3 install poetry
+          pip3 install poetry poethepoet[poetry_plugin]
           poetry -C viridian/algae install --without devel
-
-      - name: Generate Code 🚧
-        run: poetry -C viridian/algae run generate
 
       - name: Create Executable Branch Name 🌱
         env:
