--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -15,7 +15,7 @@ ENV PROTOC_ZIP=protoc-$PROTOC_VERSION-linux-x86_64.zip
 # Download and install latest protoc compiler and python dependencies.
 RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip ca-certificates && rm -rf /var/lib/apt/lists/*
 RUN wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
-RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export
+RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export poethepoet[poetry_plugin]
 
 # Export dependencies from poetry to a `requirements.txt` file.
 COPY viridian/algae/pyproject.toml ./
@@ -24,7 +24,7 @@ RUN poetry install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
+RUN poetry poe python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
 FROM ubuntu:22.04 AS default-sleeping
