--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,13 +27,13 @@ jobs:
           poetry -C viridian/algae install --without client,devel
 
       - name: Test Viridian Algae (unit) 🧪
-        run: poetry -C viridian/algae poe test-unit
+        run: poetry poe -C viridian/algae test-unit
 
       - name: Test Viridian Algae (integration) 📇
-        run: poetry -C viridian/algae poe test-integration
+        run: poetry poe -C viridian/algae test-integration
 
       - name: Test Viridian Algae (smoke) 😶‍🌫️
-        run: poetry -C viridian/algae poe test-smoke
+        run: poetry poe -C viridian/algae test-smoke
 
   caerulean-whirlpool-test:
     name: Test Caerulean Whirlpool
