--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -20,11 +20,11 @@ RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-pl
 # Export dependencies from poetry to a `requirements.txt` file.
 COPY viridian/algae/pyproject.toml ./
 RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
-RUN poetry install --without client,devel
+RUN poetry --no-plugins install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN poetry poe python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
+RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
 FROM ubuntu:22.04 AS default-sleeping
