--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -12,7 +12,7 @@ ENV ECHO_PORT=5000
 
 # Copy and run echo server.
 COPY docker/echo_server.py ./
-ENTRYPOINT python3 echo_server.py
+ENTRYPOINT ["python3", "echo_server.py"]
 
 HEALTHCHECK --interval=1m --timeout=1s --retries=3 --start-period=10s --start-interval=3s CMD netstat -tulpn | grep -q ":$ECHO_PORT"
 
@@ -23,5 +23,4 @@ ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY=$NETWORK_GATEWAY
 
 # Setup default route IP and run echo server.
-ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
-    python3 echo_server.py
+ENTRYPOINT ["sh", "-c", "ip route replace default via $ARG_NETWORK_GATEWAY && python3 echo_server.py"]
