--- a/viridian/algae/docker/compose.base.yml
+++ b/viridian/algae/docker/compose.base.yml
@@ -22,7 +22,7 @@ services:
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
     volumes:
-      - ../certificates/client:/seaside/viridian/ca:ro
+      - ../certificates/viridian:/seaside/viridian/ca:ro
 
   whirlpool:
     image: seaside-whirlpool-smoke
@@ -37,7 +37,7 @@ services:
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
     volumes:
-      - ../certificates/server:/seaside/caerulean/certificates:ro
+      - ../certificates/caerulean:/seaside/caerulean/certificates:ro
 
   echo:
     image: seaside-echo-smoke
