--- a/viridian/algae/docker/compose.domain.yml
+++ b/viridian/algae/docker/compose.domain.yml
@@ -20,7 +20,7 @@ services:
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
     volumes:
-      - ../certificates/client:/seaside/viridian/ca:ro
+      - ../certificates/viridian:/seaside/viridian/ca:ro
     networks:
       sea-net:
         ipv4_address: 10.0.0.65
