--- a/viridian/algae/docker/compose.integration.yml
+++ b/viridian/algae/docker/compose.integration.yml
@@ -17,7 +17,7 @@ services:
       RESTRICTED_ADDRESS: 1.1.1.1
       SEASIDE_ADDRESS: 10.87.65.87
     volumes:
-      - ../certificates/client:/seaside/viridian/ca:ro
+      - ../certificates/viridian:/seaside/viridian/ca:ro
     networks:
       sea-client:
         ipv4_address: 10.65.0.65
