--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+name: seaside-algae-local
 
 services:
   algae:
@@ -14,7 +14,7 @@ services:
       SEASIDE_ADDRESS: 10.87.65.87
       LOCAL_ADDRESS: 10.65.0.65
       ECHO_ADDRESS: 10.42.0.42
-      SEASIDE_CONNECTION_TIMEOUT: 30
+      SEASIDE_CONNECTION_TIMEOUT: 30.0
     networks:
       sea-cli-int:
         ipv4_address: 10.65.0.65
@@ -37,7 +37,7 @@ services:
         NETWORK_GATEWAY: 10.65.0.100
     environment:
       SEASIDE_ADDRESS: 10.87.65.87
-      SEASIDE_CONNECTION_TIMEOUT: 30
+      SEASIDE_CONNECTION_TIMEOUT: 30.0
     networks:
       - sea-cli-int
     depends_on:
@@ -72,8 +72,6 @@ services:
     environment:
       SEASIDE_ADDRESS: 10.87.65.87
       SEASIDE_EXTERNAL: 10.87.42.87
-    volumes:
-      - ./certificates:/seaside/caerulean/certificates
     networks:
       sea-rout-int:
         ipv4_address: 10.87.65.87
