--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -23,7 +23,7 @@ jobs:
         run: make lint-scripts
 
   misc-scripts-lint:
-    name: Lint Shell Scripts Everywhere
+    name: Lint Misc Scripts Everywhere
     runs-on: ubuntu-latest
 
     steps:
@@ -50,7 +50,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install Dependencies 🔮
-        run: pip3 install poetry
+        run: pip3 install poetry poethepoet[poetry_plugin]
 
       - name: Lint Viridian Algae 🧪
         run: make lint-algae
