--- a/viridian/algae/docker/compose.domain.yml
+++ b/viridian/algae/docker/compose.domain.yml
@@ -1,17 +1,26 @@
-name: seaside-algae-remote
+name: seaside-algae-domain
 
 services:
   algae:
-    image: seaside-algae-smoke-remote
+    image: seaside-algae-smoke-domain
     container_name: seaside-algae
-    extends:
-      file: compose.base.yml
-      service: algae
+    privileged: true
     build:
+      dockerfile: viridian/algae/docker/Dockerfile.algae
+      context: ../../..
+      target: commanded
       args:
         NETWORK_GATEWAY: 10.0.0.100
+        COMMAND: dig +short google.com
+    env_file:
+      - test.conf.env
     environment:
       SEASIDE_ADDRESS: 10.0.0.87
+      SEASIDE_ROOT_CERTIFICATE_AUTHORITY: /seaside/viridian/ca/rootCA.crt
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=1
+    volumes:
+      - ../certificates/viridian:/seaside/viridian/ca:ro
     networks:
       sea-net:
         ipv4_address: 10.0.0.65
@@ -20,7 +29,7 @@ services:
         condition: service_healthy
 
   whirlpool:
-    image: seaside-whirlpool-smoke-remote
+    image: seaside-whirlpool-smoke-domain
     extends:
       file: compose.base.yml
       service: whirlpool
