--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,6 +26,9 @@ jobs:
       pull-requests: write
 
     steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
+
       - name: Install NodeJS 🪢
         uses: actions/setup-node@v4
         with:
