--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,8 +60,8 @@ jobs:
           retention-days: 3
           if-no-files-found: error
           path: |
-            **/*.run
-            **/*.pyz
+            viridian/algae/dist/*.run
+            viridian/algae/*.pyz
 
   caerulean-whirlpool-build:
     name: Build Caerulean Whirlpool Server Executable
