--- a/viridian/reef/Makefile
+++ b/viridian/reef/Makefile
@@ -45,7 +45,7 @@ ifndef CI
 else
 	docker build -f docker/Dockerfile --target test -t seaside-reef-test -q ../..
 endif
-	docker run --privileged --rm --name seaside-reef-test --sysctl net.ipv6.conf.all.disable_ipv6=1 --entrypoint cargo seaside-reef-test test --package reef --lib -- --nocapture --show-output
+	docker run --privileged --rm --name seaside-reef-test --sysctl net.ipv6.conf.all.disable_ipv6=1 --entrypoint cargo seaside-reef-test test --package SeasideVPN-Reef --lib -- --nocapture --show-output
 .PHONY: test-unit
 
 test-integration: certificates
