--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,6 @@ jobs:
 
       - name: Install Dependencies 🔮
         run: |
-          sudo apt-get install -y --no-install-recommends protobuf-compiler
           go install golang.org/x/lint/golint@latest
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
@@ -132,9 +131,6 @@ jobs:
         with:
           version: "24.4"
 
-      - name: Install Dependencies 🔮
-        run: sudo apt-get install -y --no-install-recommends protobuf-compiler
-
       - name: Create Executable Branch Name 🌱
         env:
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
@@ -144,7 +140,7 @@ jobs:
           BRANCH_NAME="${{ env.BRANCH_NAME }}"
           BRANCH_NAME=${BRANCH_NAME////-}
           echo BRANCH=${BRANCH_NAME} >> $GITHUB_ENV
-          echo TARGET=${ARCHITECTURE}-${OS_TARGET}-gnu >> $GITHUB_ENV
+          echo TARGET=${ARCHITECTURE}-${OS_TARGET} >> $GITHUB_ENV
 
       - name: Setup Nightly Rust 🦀
         uses: actions-rust-lang/setup-rust-toolchain@v1
