--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,7 +115,7 @@ jobs:
 
   viridian-reef-build:
     name: Build Viridian Reef Client Executable
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os == 'linux' && 'ubuntu-latest' || 'windows-latest' }}
     strategy:
       fail-fast: false
       matrix:
@@ -130,6 +130,18 @@ jobs:
         uses: arduino/setup-protoc@v3
         with:
           version: "24.4"
+
+      - name: Install Compiler (Linux) 🤖
+        if: ${{ matrix.os == 'linux' }}
+        uses: rlalik/setup-cpp-compiler@v1.2
+        with:
+          compiler: ${{ matrix.arch == 'arm64' && 'gcc-aarch64-linux-gnu' || 'gcc' }}
+
+      - name: Install Compiler (Windows) 🤖
+        if: ${{ matrix.os == 'windows' }}
+        uses: TheMrMilchmann/setup-msvc-dev@v3
+        with:
+          arch: ${{ matrix.arch == 'arm64' && 'x64_arm64' || 'x64' }}
 
       - name: Create Executable Branch Name 🌱
         env:
