--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -1,10 +1,8 @@
-cargo-features = ["different-binary-name"]
-
 [package]
 name = "SeasideVPN-Reef"
 version = "0.0.3"
 edition = "2021"
-description = "A production-ready SeasideVPN client for Linux"
+description = "A production-ready SeasideVPN client for Linux and Windows"
 authors = [
     "Alexander Sergeev <alexander.sergeev@onmail.com>"
 ]
@@ -17,8 +15,6 @@ prost = "^0.13.3"
 log = "^0.4.22"
 env_logger = "^0.11.5"
 prost-types = "^0.13.3"
-neli = "^0.6.4"
-iptables = "^0.5.1"
 gethostname = "^0.5.0"
 chacha20poly1305 = "^0.10.1"
 simple-error = "^0.3.1"
@@ -26,6 +22,12 @@ tun = { version = "^0.7.1", features = ["async"] }
 tonic = { version = "^0.12.3", features = ["tls", "tls-webpki-roots"] }
 tokio = { version = "^1.41.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
 structopt = { version = "^0.3.26", optional = true }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+neli = "^0.6.4"
+iptables = "^0.5.1"
+
+
 
 [features]
 cli-exec = ["structopt"]
@@ -45,5 +47,4 @@ path = "src/lib/mod.rs"
 [[bin]]
 name = "cli"
 path = "src/cli.rs"
-filename = "cli.run"
 required-features = ["cli-exec"] 
