--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,29 +34,22 @@ jobs:
           pip3 install poetry poethepoet[poetry_plugin]
           poetry -C viridian/algae install --without devel
 
-      - name: Create Executable Branch Name 🌱
-        env:
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        run: |
-          BRANCH_NAME="${{ env.BRANCH_NAME }}"
-          BRANCH_NAME=${BRANCH_NAME////-}
-          echo BRANCH=${BRANCH_NAME} >> $GITHUB_ENV
-          echo ARCH=`uname -m` >> $GITHUB_ENV
-
       - name: Build Algae Executable 🏗️
         env:
-          EXEC_NAME: ${{ format('viridian-algae-executable-{0}-{1}', env.BRANCH, env.ARCH) }}
+          EXEC_NAME: viridian-algae-executable
         run: poetry poe -C viridian/algae compile ${{ env.EXEC_NAME }}.run
 
       - name: Build Caerulean Installer 📥
         env:
-          EXEC_NAME: ${{ format('caerulean-installer-{0}', env.BRANCH) }}
+          EXEC_NAME: caerulean-installer
         run: poetry poe -C viridian/algae bundle ${{ env.EXEC_NAME }}.pyz
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
+        env:
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         with:
-          name: algae-executable
+          name: algae-executable-${{ env.BRANCH_NAME }}
           retention-days: 3
           if-no-files-found: error
           path: |
@@ -91,24 +84,18 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
-      - name: Create Executable Branch Name 🌱
-        env:
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-        run: |
-          BRANCH_NAME="${{ env.BRANCH_NAME }}"
-          BRANCH_NAME=${BRANCH_NAME////-}
-          echo BRANCH=${BRANCH_NAME} >> $GITHUB_ENV
-
       - name: Build Caerulean Whirlpool 🏗️
         env:
           GOARCH: ${{ matrix.arch }}
-          EXEC_NAME: ${{ format('caerulean-whirlpool-executable-{0}-{1}', env.BRANCH, matrix.arch) }}
+          EXEC_NAME: ${{ format('caerulean-whirlpool-executable-{0}', matrix.arch) }}
         run: make -C caerulean/whirlpool build EXEC_NAME=${{ env.EXEC_NAME }}.run
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
+        env:
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         with:
-          name: whirlpool-executable-${{ matrix.arch }}
+          name: whirlpool-executable-${{ env.BRANCH_NAME }}-${{ matrix.arch }}
           path: caerulean/whirlpool/build/*.run
           retention-days: 3
           if-no-files-found: error
@@ -143,32 +130,32 @@ jobs:
         with:
           arch: ${{ matrix.arch == 'arm64' && 'x64_arm64' || 'x64' }}
 
-      - name: Create Executable Branch Name 🌱
-        env:
-          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
-          ARCHITECTURE: ${{ matrix.arch == 'amd64' && 'x86_64' || 'aarch64' }}
-          OS_TARGET: ${{ matrix.os == 'linux' && 'unknown-linux-gnu' || 'pc-windows-msvc' }}
-        run: |
-          BRANCH_NAME="${{ env.BRANCH_NAME }}"
-          BRANCH_NAME=${BRANCH_NAME////-}
-          echo BRANCH=${BRANCH_NAME} >> $GITHUB_ENV
-          echo TARGET=${ARCHITECTURE}-${OS_TARGET} >> $GITHUB_ENV
-
       - name: Setup Nightly Rust 🦀
         uses: actions-rust-lang/setup-rust-toolchain@v1
+        env:
+          TARGET: ${{ matrix.arch == 'amd64' && 'x86_64' || 'aarch64' }}-${{ matrix.os == 'linux' && 'unknown-linux-gnu' || 'pc-windows-msvc' }}
         with:
           toolchain: nightly
           target: ${{ env.TARGET }}
 
       - name: Build Viridian Reef 🏗️
         env:
-          EXEC_NAME: ${{ format('caerulean-whirlpool-executable-{0}-{1}-{2}', env.BRANCH, matrix.os, matrix.arch) }}
-        run: cargo build --release --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml --target ${{ env.TARGET }}
+          ARCHITECTURE: ${{ matrix.arch == 'amd64' && 'x86_64' || 'aarch64' }}
+          TARGET_OS: ${{ matrix.os == 'linux' && 'unknown-linux-gnu' || 'pc-windows-msvc' }}
+          BUILD_TARGET: ${{ env.ARCHITECTURE }}-${{ env.TARGET_OS }}
+          EXEC_NAME: ${{ format('caerulean-whirlpool-executable-{0}-{1}', env.TARGET_OS, env.ARCHITECTURE) }}
+        run: cargo build --release --features cli-exec --bin cli --manifest-path viridian/reef/Cargo.toml --target ${{ env.BUILD_TARGET }}
+
+      - name: Rename Executable On Linux 📛
+        if: ${{ matrix.os == 'linux' }}
+        run: mv viridian/reef/target/release/cli viridian/reef/target/release/cli.run
 
       - name: Save Artifact 🏺
         uses: actions/upload-artifact@v4
+        env:
+          BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         with:
-          name: whirlpool-executable-${{ matrix.os }}-${{ matrix.arch }}
-          path: viridian/reef/target/**/cli.run
+          name: reef-executable-${{ env.BRANCH_NAME }}-${{ matrix.os }}-${{ matrix.arch }}
+          path: viridian/reef/target/release/cli.run
           retention-days: 3
           if-no-files-found: error
