--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -28,14 +28,11 @@ neli = "^0.6.4"
 iptables = "^0.5.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
-windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_WindowsFilteringPlatform", "Win32_Security", "Win32_System_Rpc"] }
+windows = { version = "0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
 
 [build-dependencies]
 tonic-build = "^0.12.3"
 protoc-prebuilt = "^0.3.0"
-
-[target.'cfg(target_os = "windows")'.build-dependencies]
-bindgen = "^0.71.1"
 
 [dev-dependencies]
 regex = "^1.11.1"
